feat(java21): apply sequenced collections API
Replace .get(0) with .getFirst() for better readability:
- Room.java: Use getFirst() to get first open time of next day
- Leverages Java 21 sequenced collections feature
- More expressive and intention-revealing code

All 191 tests passing